--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,12 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.casa.diego.prototipoedp"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
-        versionName "1.2"
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
